# schema-engine

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  flake.nix
src/: authority_ingest.rs  legacy_ingest.rs  lib.rs
tests/: equivalence.rs
tests/fixtures/: equivalence-min.schema  spirit-min.schema
