[package]
name="schema-engine"
version="0.2.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/schema-engine"
description="Core-first Schema daemon and thin CLI"
[dependencies]
core-schema={git="https://github.com/LiGoldragon/core-schema.git",rev="1122370fbe3f65c56957431714a19c3920365466"}
content-identity={git="https://github.com/LiGoldragon/protos.git",rev="f12a80c85d9d27ac4432b86b7d3095e8387c6fa9"}
name-table={git="https://github.com/LiGoldragon/protos.git",rev="f12a80c85d9d27ac4432b86b7d3095e8387c6fa9"}
schema-language={git="https://github.com/LiGoldragon/schema-language.git",rev="9c217610c4b8"}
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01",default-features=false,features=["macros"]}
rkyv={version="0.8",features=["bytecheck"]}
signal-schema={git="https://github.com/LiGoldragon/signal-schema.git",rev="0c4b945d942ada0939fef304a155949faad5b607"}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="25ac4fd0abf5d58ab9fce1f10d58220b62bef902"}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","fs","sync"]}
thiserror="2"
[dev-dependencies]
sema-storage={git="https://github.com/LiGoldragon/sema-storage.git",rev="a2516082061063447ed5e346a0415118b4c0edfa"}
tempfile="3"
[lints.rust]
unsafe_code="forbid"
