[package]
name="schema-engine"
version="0.2.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/schema-engine"
description="Encoded-form Schema daemon and thin CLI"
[dependencies]
core-schema={git="https://github.com/LiGoldragon/core-schema.git",rev="cee7f0873c8ccfba0afe09cbb40de531c9e73077"}
content-identity={git="https://github.com/LiGoldragon/protos.git",rev="e9983d6220856a011886145ed0ef0cc41c9bf597"}
name-table={git="https://github.com/LiGoldragon/protos.git",rev="e9983d6220856a011886145ed0ef0cc41c9bf597"}
schema-language={git="https://github.com/LiGoldragon/schema-language.git",rev="9c217610c4b8"}
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01",default-features=false,features=["macros"]}
rkyv={version="0.8",features=["bytecheck"]}
signal-schema={git="https://github.com/LiGoldragon/signal-schema.git",rev="5e985cccbb30d87b3d58bbe6c97759c870d0232f"}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="4fa7256fe5bfe6d4d85b3acceb028d3ae529f6ef"}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","fs","sync"]}
thiserror="2"
[dev-dependencies]
sema-storage={git="https://github.com/LiGoldragon/sema-storage.git",rev="269953164460cd842c1f3f8c9c93e4afe1e3628e"}
tempfile="3"
[lints.rust]
unsafe_code="forbid"
